--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,12 @@
-
+# Database connection
 db.url=jdbc:mysql://localhost:3306/masterdb
 db.username=root
 db.password=1234@Dpp#
-db.pool.size=10
+db.driver=com.mysql.cj.jdbc.Driver
+
+# HikariCP
+hikari.maximumPoolSize=10
+hikari.minimumIdle=2
+hikari.connectionTimeout=30000
+hikari.idleTimeout=600000
+hikari.maxLifetime=1800000
